AwesomeSlider of skill img is converted to background-img

--- a/src/App.css
+++ b/src/App.css
@@ -1509,7 +1509,7 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
    width: 100%;
    height: 40vh;
    position:absolute;
-    background-image: url('./images/wooden-floor.jpg');
+  background-image: url('./images/wooden-floor.jpg');
    z-index: -10;
    top: 630px;
    background-size: cover;
@@ -1613,34 +1613,64 @@ position: relative !important;
 bottom: 40px !important;
 }
 
+.ruby-img, .rails-img, .react-img, .js-img, .active-record, .html-img, .css-img, .mq-img, .redux-img, .heroku-img, .sqlite-img{
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.rails-img, .mq-img, .redux-img, .sqlite-img{
+  background-size: 80%;
+}
+
+.js-img, .html-img, .heroku-img{
+  background-size: cover;
+}
+
 .ruby-img{
- width: 100%;
+  background-image: url('./images/ruby.jpg');
 }
 
-
-.rails-img, .redux-img{
-width: 80%;
+.rails-img{
+  background-image: url('./images/rails.png');
 }
 
-.css-img, .js-img{
-height: 75vh;
+.react-img{
+  background-image: url('./images/react.gif');
 }
 
-.mq-img, .sqlite-img{
-width: 90%;
+.js-img{
+  background-image: url('./images/javascript.jpg');
+}
+
+.active-record{
+  background-image: url('./images/active-record.png');
+}
+
+.html-img{
+  background-image: url('./images/html.jpg');
+}
+
+.css-img{
+  background-image: url('./images/css.jpg');
+  background-size: 120%;
+}
+
+.mq-img{
+  background-image: url('./images/mq.png');
+}
+
+.redux-img{
+  background-image: url('./images/redux.png');
 }
 
 .heroku-img{
-  height: 75vh;
+  background-image: url('./images/heroku.png');
 }
 
-.linked-in-div{
-padding: 5em 10em;
-/* padding: 50px 50px 50px 150px; */
-margin: 50px auto;
-display: flex;
-
-
+.sqlite-img{
+  background-image: url('./images/sqlite.png');
 }
 
 .linked-in-div a{
@@ -3011,3 +3041,19 @@ to {
 
 }
 
+@media only screen and (min-width: 1400px){
+  .awssld{
+    position: absolute !important;
+    top: 100px;
+    left: 350px;
+    width: 60% !important; 
+    height: 80% !important;
+    z-index:6 !important;
+    margin: 30px auto !important;
+    max-width: none !important;
+  }
+  
+  .awssld__container{
+    height: 100% !important;
+  }
+}
