--- a/src/App.css
+++ b/src/App.css
@@ -1505,7 +1505,7 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
 }
 
 
- .floor{
+.floor{
    width: 100%;
    height: 40vh;
    position:absolute;
@@ -1513,7 +1513,7 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
    z-index: -10;
    top: 630px;
    background-size: cover;
- }
+}
 
 .bio, .coder-cat{
   width: 100%;
@@ -1548,8 +1548,8 @@ width: 40%;
   position: absolute;
   height: 30px;
   width: 30px;
-  top: 0;
-  right: 0;
+  top: 0px;
+  right: 0px;
   border-radius: 0 0 0 10px;
   font-size: 15px;
   
@@ -1611,6 +1611,7 @@ padding: 0 !important;
 .awssld__bullets{
 position: relative !important;
 bottom: 40px !important;
+
 }
 
 .ruby-img, .rails-img, .react-img, .js-img, .active-record, .html-img, .css-img, .mq-img, .redux-img, .heroku-img, .sqlite-img{
@@ -1623,6 +1624,7 @@ bottom: 40px !important;
 .rails-img, .mq-img, .redux-img, .sqlite-img{
   background-size: 80%;
 }
+
 
 .js-img, .html-img, .heroku-img{
   background-size: cover;
@@ -1656,6 +1658,7 @@ bottom: 40px !important;
   background-image: url('./images/css.jpg');
   background-size: 120%;
 }
+
 
 .mq-img{
   background-image: url('./images/mq.png');
@@ -1827,7 +1830,14 @@ to {
   .awssld__container{
     height: 100% !important;
   }
+  
+  .awssld__controls{
+    visibility: visible !important;
+  }
 
+  .ruby-img, .heroku-img{
+   height: 150vh;
+  }
 }
 
 @media only screen and (min-width: 350px){
