--- a/src/App.css
+++ b/src/App.css
@@ -1598,10 +1598,6 @@ width: auto;
   margin: 30px auto !important;
 }
 
-.awssld__container{
-  width: 100% !important;
-}
-
 
 .awssld__content{
 
@@ -1624,16 +1620,18 @@ bottom: 40px !important;
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 80%;
 }
 
-.rails-img, .mq-img, .redux-img, .sqlite-img{
+
+/* .ruby-img{
   background-size: 80%;
 }
 
 
 .js-img, .html-img, .heroku-img{
-  background-size: cover;
-}
+  background-size: 80%;
+} */
 
 .ruby-img{
   background-image: url('./images/ruby.jpg');
@@ -1661,7 +1659,7 @@ bottom: 40px !important;
 
 .css-img{
   background-image: url('./images/css.jpg');
-  background-size: 120%;
+  /* background-size: 120%; */
 }
 
 
