Attempt to fix x button

--- a/src/App.css
+++ b/src/App.css
@@ -1633,9 +1633,9 @@ bottom: 40px !important;
   background-size: 80%;
 } */
 
-.ruby-img{
+/* .ruby-img{
   background-image: url('./images/ruby.jpg');
-}
+} */
 
 .rails-img{
   background-image: url('./images/rails.png');
