Attempt to fix x button

--- a/src/App.css
+++ b/src/App.css
@@ -1548,8 +1548,8 @@ width: 40%;
   position: relative;
   height: 30px;
   width: 30px;
-  top: 100px;
-  right: -558px;
+  top: 11%;
+  left: 48%;
   border-radius:0 10px 0 10px;
   font-size: 15px;
   /* background: white; */
