--- a/src/App.css
+++ b/src/App.css
@@ -1548,11 +1548,11 @@ width: 40%;
   position: relative;
   height: 30px;
   width: 30px;
-  top: 11%;
+  top: 10%;
   left: 48%;
   border-radius:0 10px 0 10px;
   font-size: 15px;
-  /* background: white; */
+  background: white;
 }
 
 #flying-2{
