--- a/src/App.css
+++ b/src/App.css
@@ -1545,11 +1545,11 @@ width: 40%;
 }
 
 .x{
-  position: relative;
+  position: absolute;
   height: 30px;
   width: 30px;
-  top: 10%;
-  left: 48%;
+  top: 0%;
+  left: 97%;
   border-radius:0 10px 0 10px;
   font-size: 15px;
   background: white;
@@ -1606,7 +1606,10 @@ border-radius: 15px;
 padding: 0 !important;
 
 }
+#awssld_container{
+  width: 100%;
 
+}
 
 .awssld__bullets{
 position: relative !important;
@@ -1617,9 +1620,6 @@ bottom: 40px !important;
 
 .ruby-img, .rails-img, .react-img, .js-img, .active-record, .html-img, .css-img, .mq-img, .redux-img, .heroku-img, .sqlite-img{
   width: 100%;
-  height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .rails-img, .mq-img, .redux-img, .sqlite-img{
@@ -1630,9 +1630,9 @@ bottom: 40px !important;
   background-size: cover;
 }
 
-.ruby-img{
+/* .ruby-img{
   background-image: url('./images/ruby.jpg');
-}
+} */
 
 .rails-img{
   background-image: url('./images/rails.png');
@@ -1833,9 +1833,9 @@ to {
     visibility: visible !important;
   }
 
-  /* .ruby-img, .heroku-img{
-   height: 150vh;
-  } */
+  .ruby-img, .heroku-img{
+   height: 120vh;
+  }
 }
 
 @media only screen and (min-width: 350px){
@@ -2089,7 +2089,10 @@ to {
   .awssld__container{
     height: 100% !important;
   }
-
+  
+  .x{
+    top: 0;
+  }
 }
 
 
