Attempt to fix x button

--- a/src/App.css
+++ b/src/App.css
@@ -1545,13 +1545,13 @@ width: 40%;
 }
 
 .x{
-  position: absolute;
+  /* position: absolute;
   height: 30px;
   width: 30px;
   top: 0%;
   left: 97%;
   border-radius:0 10px 0 10px;
-  font-size: 15px;
+  font-size: 15px; */
   background: white;
 }
 
