--- a/src/App.css
+++ b/src/App.css
@@ -1582,6 +1582,17 @@ width: auto;
 
 }
 
+.x{
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  background: white;
+  position: relative;
+  top: -780px;
+  left:560px;
+  font-weight: bold;
+  border-radius: 0 10px 0 10px;
+}
 .awssld{
   width: 60% !important; 
   z-index:6 !important;
@@ -1596,20 +1607,22 @@ border-radius: 15px;
 padding: 0 !important;
 
 }
-#awssld_container{
-  width: 100%;
-
-}
 
 .awssld__bullets{
 position: relative !important;
 bottom: 40px !important;
 
 }
-
+.container{
+  width: 100%;
+  height: 100%;
+}
 
 .ruby-img, .rails-img, .react-img, .js-img, .active-record, .html-img, .css-img, .mq-img, .redux-img, .heroku-img, .sqlite-img{
   width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .rails-img, .mq-img, .redux-img, .sqlite-img{
@@ -1620,9 +1633,9 @@ bottom: 40px !important;
   background-size: cover;
 }
 
-/* .ruby-img{
+.ruby-img{
   background-image: url('./images/ruby.jpg');
-} */
+}
 
 .rails-img{
   background-image: url('./images/rails.png');
@@ -1823,8 +1836,10 @@ to {
     visibility: visible !important;
   }
 
-  .ruby-img, .heroku-img{
-   height: 120vh;
+  .x{
+    top: -685px;
+    left: 380px;
+  
   }
 }
 
@@ -1953,6 +1968,12 @@ to {
   .awssld__container{
     height: 100% !important;
   }
+
+  .x{
+    top: -705px;
+    left: 392px;
+  
+  }
 }
 
 @media only  screen and (min-width: 400px){
@@ -2078,6 +2099,12 @@ to {
 
   .awssld__container{
     height: 100% !important;
+  }
+
+  .x{
+    top: -740px;
+    left: 392px;
+  
   }
   
  
@@ -2210,6 +2237,12 @@ to {
     height: 100% !important;
   }
 
+  .x{
+    top: -660px;
+    left: 405px;
+    z-index: 6;
+  }
+
 }
 
 @media only screen and (min-width: 600px){
@@ -2337,6 +2370,12 @@ to {
 
   .awssld__container{
     height: 100% !important;
+  }
+
+  .x{
+    top: -695px;
+    left: 392px;
+  
   }
 
 }
@@ -2467,6 +2506,11 @@ to {
   .awssld__container{
     height: 100% !important;
   }
+  .x{
+    top: -660px;
+    left: 420px;
+  
+  }
 
 }
 
@@ -2502,6 +2546,12 @@ to {
   .awssld__container{
     height: 100% !important;
   }
+
+  /* .x{
+    top: -720px !important;
+    left: 400px !important;
+  
+  } */
 }
 
 @media only screen and (min-width: 800px){
@@ -2522,6 +2572,10 @@ to {
 
  .myname{
    left: 900px;
+ }
+ .x{
+   top: -740px;
+   left: 430px;
  }
 }
 
@@ -2652,6 +2706,11 @@ to {
 .awssld__container{
   height: 100% !important;
 }
+
+.x{
+  top: -1000px;
+  left: 700px;
+}
 }
 
 @media only screen and (min-width: 1300px){
@@ -2780,7 +2839,40 @@ to {
   .awssld__container{
     height: 100% !important;
   }
+
  
+  }
+
+
+
+  @media only screen and (min-height: 375px){
+    .x{
+      left: 430px;
+      top: -680px;
+    }
+  }
+
+  @media only screen and (min-height: 760px){
+    .x{
+      top: -1000px;
+      left: 700px;
+    
+    }
+  }
+@media only screen and (min-height: 812px){
+    .x{
+      top: -895px;
+      left: 410px;
+    
+    }
+  }
+
+  @media only screen and (min-height: 1000px){
+    .x{
+      top: -620px;
+      left: 460px;
+    
+    }
   }
 
 @media only screen and (min-height: 1100px){
@@ -2909,6 +3001,11 @@ to {
   .awssld__container{
     height: 100% !important;
   }
+ .x{
+   left: 400px;
+   top: -720px;
+ }
+  
 
 }
 @media only screen and (min-height: 1300px){
@@ -3036,6 +3133,12 @@ to {
   
   .awssld__container{
     height: 100% !important;
+  }
+
+  .x{
+    top: -690px;
+    left: 390px;
+
   }
 
 }
