--- a/src/App.css
+++ b/src/App.css
@@ -1988,10 +1988,10 @@ transform: rotate(95deg);
   }
 
   .awssld,  .board{
-    top: 1150px;
+    top: 1100px;
     left: 240px;
     width: 220% !important; 
-    height: 100% !important;
+    height: 110vh !important;
   }
 
   .awssld__container{
