--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body {
   text-align: center;
   z-index: -1;
+  max-width: 100%;
   width: auto;
   height: auto;
   margin: 0;
@@ -1988,7 +1989,7 @@ transform: rotate(95deg);
   }
 
   .awssld,  .board{
-    top: 1100px;
+    top: 1150px;
     left: 240px;
     width: 220% !important; 
     height: 110vh !important;
