--- a/src/App.css
+++ b/src/App.css
@@ -1496,6 +1496,10 @@ transform: rotate(95deg);
   position: absolute;
 }
 
+.project-div{
+  display: block;
+  padding: 0 5em;
+}
 
 .bio-img-container{
   width: 30%;
@@ -1506,7 +1510,7 @@ transform: rotate(95deg);
 }
 
 .project-div .text-container{
-  width: 50%;
+  width: 100%;
   padding: 40px 10px 0 30px;
   text-align: center;
   line-height: 20px;
@@ -1567,10 +1571,13 @@ transform: rotate(95deg);
   padding-left: 5em;
  }
 
+ .video-container{
+   padding-top: 0;
+ }
 iframe{
-  height: 40vh;
-  width: 100%;
-  margin: 60px 0 0 20px;
+  height: 80vh;
+  width: 190%;
+  margin: 0 0 0 20px;
 }
  
 .ruby-img, .rails-img, .react-img, .js-img, .active-record, .html-img, .css-img, .mq-img, .redux-img, .heroku-img, .sqlite-img{
@@ -1764,10 +1771,10 @@ iframe{
   }
 
   .awssld, .board{
-    top: 1100px;
-    left: 260px;
-    width: 260% !important; 
-    height: 120vh !important;
+    top: 900px;
+    left: 120px;
+    width: 345% !important; 
+    height: 195vh !important;
   }
 
   .awssld__container{
@@ -1779,24 +1786,24 @@ iframe{
   }
 
   .bio{
-    top: 50px;
-    height: 130vh;
+    top: 92px;
+    height: 195vh;
   }
 
   .bio-img-container img{
-    margin: 100px;
+    margin: 240px 100px;
     width: 100%;
    }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 300px 0 20px 60px;
     line-height: 35px;
   }
 
   .contact-div{
     top: 100px;
-    padding: 280px  100px !important;
-    height: 120vh;
+    padding: 480px  100px !important;
+    height: 195vh;
   }
 }
 
@@ -1902,10 +1909,10 @@ iframe{
   }
 
   .awssld, .board{
-    top: 1205px;
-    left: 320px;
-    width: 235% !important; 
-    height: 10% !important;
+    top: 1000px;
+    left: 200px;
+    width: 306% !important; 
+    height: 145vh !important;
   }
 
   /* .awssld__container{
@@ -1913,24 +1920,24 @@ iframe{
   } */
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 260px 0 20px 60px;
     line-height: 40px;
   }
 
   .bio{
     top: 90px;
-    height: auto;
+    height: 175vh;
   }
 
   .bio-img-container img{
-    margin:120px;
+    margin:250px 120px;
     width: 100%;
    }
   
   .contact-div{
     top: 100px;
-    padding: 250px  100px !important;
-    height: 80vh;
+    padding: 450px  100px !important;
+    height: 145vh;
   }
 
   .project-div .text-container{
@@ -1938,6 +1945,7 @@ iframe{
   }
 
   iframe{
+
     margin-top: 120px;
   }
 }
@@ -2042,10 +2050,10 @@ iframe{
   }
 
   .awssld,  .board{
-    top: 1150px;
-    left: 240px;
-    width: 220% !important; 
-    height: auto !important;
+    top: 950px;
+    left: 130px;
+    width: 270% !important; 
+    height: 150vh !important;
   }
 
   .awssld__container{
@@ -2053,20 +2061,20 @@ iframe{
   }
 
   .bio{
-    height:auto;
+    height:155vh;
   }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 400px 0 20px 60px;
     line-height: 35px;
   }
 
   .contact-div{
     top: 90px;
-    height: 100vh;
-    padding: 320px  100px !important;
+    height: 155vh;
+    padding: 500px  100px !important;
   }
-
+  
   
 }
 
@@ -2174,10 +2182,10 @@ iframe{
   }
 
   .awssld, .board{
-    top: 1000px;
-    left: 290px;
-    width: 160% !important; 
-    height: 230vh !important;
+    top: 840px;
+    left: 160px;
+    width: 200% !important; 
+    height: 350vh !important;
   }
 
   .awssld__container{
@@ -2186,18 +2194,27 @@ iframe{
 
   .bio{
     top: 110px;
-    height: 230vh;
+    height: 350vh;
   }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 300px 0 20px 60px;
     line-height: 35px;
   }
 
   .contact-div{
     top: 110px;
-    height: 230vh;
-    padding: 250px  100px !important;
+    height: 350vh;
+    padding: 450px  100px !important;
+  }
+
+  .project-div .text-container{
+    padding-bottom: 35px;
+  }
+
+  iframe{
+    height: 200vh;
+    padding-top: 0;
   }
 }
 
@@ -2305,16 +2322,16 @@ iframe{
   }
 
   .awssld, .board{
-    top: 1005px;
-    left: 280px;
-    width: 140% !important; 
-    height: 210vh !important;
+    top: 840px;
+    left: 165px;
+    width: 175% !important; 
+    height: 310vh !important;
   }
 
   .bio{
     top: 100px;
     left: -10px;
-    height: 200vh;
+    height: 310vh;
   }
 
   .awssld__container{
@@ -2322,18 +2339,22 @@ iframe{
   }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 350px 0 20px 60px;
     line-height: 35px;
   }
 
   .bio-img-container img{
-    margin:120px;
+    margin: 260px 120px;
     width: 100%;
    }
 
   .contact-div{
-    height: 200vh;
-    padding: 300px  100px !important;
+    height: 310vh;
+    padding: 500px  100px !important;
+  }
+
+  .project-div .text-container{
+    padding-top: 100px;
   }
 }
 
@@ -2467,14 +2488,15 @@ iframe{
   .contact-div{
     padding: 350px  100px !important;
   }
+
 }
 
 @media only screen and (min-width: 730px){
   .awssld, .board{
-    top: 1000px;
-    left: 285px;
-    width: 120% !important; 
-    height: 160% !important;
+    top: 800px;
+    left: 165px;
+    width: 155% !important; 
+    height: 270vh !important;
   }
 
   .awssld__container{
@@ -2482,18 +2504,23 @@ iframe{
   }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 380px 0 20px 60px;
     line-height: 35px;
   }
 
   .bio{
     top: 10px;
-    height: 180vh;
+    height: 280vh;
   }
   .contact-div{
-    top: 10px;
-    height: 180vh;
-    padding: 280px  100px !important;
+    top: 20px;
+    height: 270vh;
+    padding: 380px  100px !important;
+  }
+
+
+  iframe{
+    height: 120vh;
   }
 }
 
@@ -2501,10 +2528,10 @@ iframe{
 
 
   .awssld, .board{
-    top: 960px;
-    left: 300px;
-    width: 110% !important; 
-    height: 70% !important;
+    top: 755px;
+    left: 170px;
+    width: 145% !important; 
+    height: 115vh !important;
   }
 
   .awssld__container{
@@ -2513,13 +2540,17 @@ iframe{
 
   .bio{
     top: 70px;
-    height: 70vh;
+    height: 110vh;
   }
 
   .contact-div{
-    top: 80px;
-    height: 70vh;
-    padding: 320px  100px !important;
+    top: 70px;
+    height: 110vh;
+    padding: 420px  100px !important;
+  }
+
+  iframe{
+    height: 50vh;
   }
 }
 
@@ -2537,14 +2568,15 @@ iframe{
   }
 
   .awssld, .board{
-    top: 950px;
-    left: 330px;
-    width: 110% !important; 
-    height: 190vh !important;
+    top: 800px;
+    left: 210px;
+    width: 137% !important; 
+    height:295vh !important;
   }
 
   .bio{
-    height: auto;
+    top: 30px;
+    height: 295vh;
   }
 
   .awssld__container{
@@ -2552,13 +2584,17 @@ iframe{
   }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 300px 0 20px 60px;
     line-height: 35px;
   }
 
   .contact-div{
-    padding: 360px  100px !important;
+    top: 30px;
+    height: 295vh;
+    padding: 460px  100px !important;
   }
+
+ 
 }
 
 @media only screen and (min-width: 1000px){
@@ -2681,6 +2717,11 @@ iframe{
   height: 130vh;
 }
 
+.bio-img-container{
+  width: 25%;
+  margin-top: -70px;
+}
+
 .text-container{
   padding: 100px 0 20px 90px;
   line-height: 75px;
@@ -2693,7 +2734,7 @@ iframe{
  }
 
  iframe{
-   height: 30vh;
+   height: 60vh;
  }
 }
 
@@ -2802,10 +2843,10 @@ iframe{
   }
 
   .awssld, .board{
-    top: 100px;
-    left: 300px;
-    width: 70% !important; 
-    height: 60% !important;
+    top: 80px;
+    left: 140px;
+    width: 85% !important; 
+    height: 80vh !important;
   }
   
   .awssld__container{
@@ -2816,14 +2857,26 @@ iframe{
     height: 70vh;
   }
 
+  .bio-img-container img{
+    width: 80%;
+  }
+
   .text-container{
     padding: 70px 0 20px 60px;
     line-height: 45px;
   }
   
   .contact-div{
-    height: 60vh;
+    height: 80vh;
     padding: 280px  100px !important;
+  }
+
+  iframe{
+    height: 25vh;
+  }
+
+  .project-div {
+    height: auto;
   }
 }
 
@@ -3050,10 +3103,10 @@ iframe{
   }
 
   .awssld, .board{
-    top: 1200px;
-    left: 550px;
-    width: 80% !important; 
-    height: 50% !important;
+    top: 1000px;
+    left: 400px;
+    width: 109% !important; 
+    height: 85vh !important;
   }
   
   .awssld__container{
@@ -3061,17 +3114,25 @@ iframe{
   }
 
   .bio{
-    height: 50vh;
+    height: 82vh;
   }
 
   .text-container{
-    padding: 70px 0 20px 60px;
+    padding: 350px 0 20px 60px;
     line-height: 35px;
+  }
+
+  .bio-img-container{
+    padding-top: 140px;
   }
   
   .contact-div{
-    height: 50vh;
-    padding: 310px  100px !important;
+    height: 82vh;
+    padding: 450px  100px !important;
+  }
+
+  iframe{
+    height: 40vh;
   }
 }
 
@@ -3080,11 +3141,11 @@ iframe{
     top: 80px;
     left: 350px;
     width: 60% !important; 
-    height: auto !important;
+    height: 80vh !important;
   }
 
   .bio{
-    height: auto;
+    height: 80vh;
   }
   
   .awssld__container{
@@ -3097,12 +3158,20 @@ iframe{
   }
 
   .bio-img-container img{
-    margin:80px;
+    margin: 220px 80px 0 80px;
    }
 
    .contact-div{
-    height: 70vh;
+    height: 80vh;
     padding: 300px  100px !important;
+  }
+
+  iframe{
+    height: 35vh;
+  }
+
+  .project-div .text-container{
+    padding-top: 0;
   }
   
 }
